# courses_platform

./: docker-compose.yml  pyproject.toml
app/: docker-compose.yml  pyproject.toml  temp.py
app/backend/: Dockerfile  dependencies.py  main.py
app/backend/api/v1/endpoints/: __init__.py  admin.py  auth.py  certificates.py  comments.py  courses.py  files.py  notifications.py  statistics.py  tasks.py  users.py
app/backend/core/: config.py  database.py  security.py
app/backend/crud/: base.py  course.py  statistics.py
app/backend/models/: course.py  user.py
app/backend/schemas/: base.py  certificate.py  comment.py  course.py  notification.py  task.py
app/backend/services/: __init__.py  admin.py  certificate.py  course.py  file.py  notification.py
app/backend/utils/: file_utils.py
app/documentations/: README.md  administrator.md  certificate.md  course.md  lk.md  start.md  teacher.md
